--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
                             <a href="#">Annulla in qualsiasi momento</a>
                         </p>
                         <p>
-                            <i class="fa-solid fa-arrow-down"></i>
+                            <a href="#subscribe">
+                                <i class="fa-solid fa-arrow-down"></i>
+                            </a>
                         </p>
                     </div>
                 </div>
@@ -77,7 +79,7 @@
         </section>
 
         <section class="subscription-plan main-container">
-            <h2>Trova il piano business che fa per te</h2>
+            <h2 id="subscribe">Trova il piano business che fa per te</h2>
             <input type="radio" name="billing frequency" id="monthly-bill">
             <label for="monthly-bill">Fatturazione mensile</label>
             <input type="radio" name="billing frequency" id="annual-bill">
@@ -394,23 +396,56 @@
 
         <section class="faq main-container">
             <h2>Domande frequenti</h2>
-            <div class="question flex-between">
-                <p>
-                    Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
-                </p>
-                <i class="fa-solid fa-angle-down"></i>
+            <div class="accordion-item">
+                <div class="question flex-between">
+                    <p>
+                        Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
+                    </p>
+                    <span>
+                        <i class="fa-solid fa-angle-down"></i>
+                    </span>
+                </div>
+                <div class="accordion-item-content">
+                    <p>
+                        Dropbox Business Advanced garantisce un maggiore spazio di archiviazione e un trasferimento
+                        di
+                        file senza limiti di dimensioni. Inoltre riceverai avvisi su eventuali attività sospette.
+                    </p>
+                </div>
             </div>
-            <div class="question flex-between">
-                <p>
-                    Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
-                </p>
-                <i class="fa-solid fa-angle-down"></i>
+            <div class="accordion-item">
+                <div class="question flex-between">
+                    <p>
+                        Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
+                    </p>
+                    <span>
+                        <i class="fa-solid fa-angle-down"></i>
+                    </span>
+                </div>
+                <div class="accordion-item-content">
+                    <p>
+                        Dropbox Business Advanced garantisce un maggiore spazio di archiviazione e un trasferimento
+                        di
+                        file senza limiti di dimensioni. Inoltre riceverai avvisi su eventuali attività sospette.
+                    </p>
+                </div>
             </div>
-            <div class="question flex-between">
-                <p>
-                    Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
-                </p>
-                <i class="fa-solid fa-angle-down"></i>
+            <div class="accordion-item">
+                <div class="question flex-between">
+                    <p>
+                        Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
+                    </p>
+                    <span>
+                        <i class="fa-solid fa-angle-down"></i>
+                    </span>
+                </div>
+                <div class="accordion-item-content">
+                    <p>
+                        Dropbox Business Advanced garantisce un maggiore spazio di archiviazione e un trasferimento
+                        di
+                        file senza limiti di dimensioni. Inoltre riceverai avvisi su eventuali attività sospette.
+                    </p>
+                </div>
             </div>
         </section>
     </main>
