added login page

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <a href="#">Contatta l'ufficio vendite</a>
                     </li>
                     <li>
-                        <a href="#">Accedi</a>
+                        <a href="./login.html">Accedi</a>
                     </li>
                 </ul>
                 <button class="btn-blue">Inizia</button>
@@ -75,7 +75,9 @@
                             stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo
                             intelligente e integrato per ottimizzare il flusso di lavoro esistente.
                         </p>
-                        <button class="btn-blue">Inizia la tua prova gratuita</button>
+                        <a href="./login.html">
+                            <button class="btn-blue">Inizia la tua prova gratuita</button>
+                        </a>
                         <p>
                             <a href="#">Annulla in qualsiasi momento</a>
                         </p>
@@ -118,9 +120,11 @@
                                 <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
                             </li>
                         </ul>
-                        <button class="btn-blue">
-                            Prova gratis per 30 giorni
-                        </button>
+                        <a href="./login.html">
+                            <button class="btn-blue">
+                                Prova gratis per 30 giorni
+                            </button>
+                        </a>
                         <span>oppure</span><a href="#">acquista ora</a>
                         <ul class="sub-recap">Punti salienti del piano
                             <li>
@@ -158,9 +162,11 @@
                                 </span>
                             </li>
                         </ul>
-                        <button class="btn-blue">
-                            Prova gratis per 30 giorni
-                        </button>
+                        <a href="./login.html">
+                            <button class="btn-blue">
+                                Prova gratis per 30 giorni
+                            </button>
+                        </a>
                         <span>oppure</span><a href="#">acquista ora</a>
                         <ul class="sub-recap">Punti salienti del piano
                             <li>
@@ -220,9 +226,11 @@
                                 </span>
                             </li>
                         </ul>
-                        <button class="btn-blue">
-                            Prova gratis per 30 giorni
-                        </button>
+                        <a href="./login.html">
+                            <button class="btn-blue">
+                                Prova gratis per 30 giorni
+                            </button>
+                        </a>
                         <span>oppure</span><a href="#">acquista ora</a>
                         <ul class="sub-recap">Punti salienti del piano
                             <li>
@@ -401,7 +409,11 @@
                 <h2>
                     Porta Dropbox Business nella tua azienda.
                 </h2>
-                <button class="btn-white">Inizia la tua prova gratuita</button>
+                <a href="./login.html">
+                    <button class="btn-white">
+                        Inizia la tua prova gratuita
+                    </button>
+                </a>
             </div>
         </section>
 
