change customers section layout, gave header fixed position

--- a/index.html
+++ b/index.html
@@ -352,56 +352,59 @@
             </div>
         </section>
 
-        <section class="dropbox-business main-container">
-            <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
-            <a href="#">Scopri di più sui nostri clienti</a>
-        </section>
+        <section class="dropbox-customers">
+            <div class="main-container">
+                <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
+                <a href="#">Scopri di più sui nostri clienti</a>
+            </div>
 
-        <section class="customer-teams flex-between">
-            <div class="customers-left">
-                <div class="customers">
-                    <div id="designit" class="customer">
-                        <img src="img/designit.svg" alt="Designit Logo">
+            <div class="customer-teams flex-between">
+                <div class="customers-left">
+                    <div class="customers">
+                        <div id="designit" class="customer">
+                            <img src="img/designit.svg" alt="Designit Logo">
+                        </div>
+                        <div id="arizona-uni" class="customer">
+                            <img src="img/arizona_state_university.svg" alt="Arizona State University Logo">
+                        </div>
+                        <div id="florida-uni" class="customer">
+                            <img src="img/university_of_florida.svg" alt="University Of Florida Logo">
+                        </div>
+                        <div id="topps" class="customer">
+                            <img src="img/topps.svg" alt="Topps Logo">
+                        </div>
                     </div>
-                    <div id="arizona-uni" class="customer">
-                        <img src="img/arizona_state_university.svg" alt="Arizona State University Logo">
-                    </div>
-                    <div id="florida-uni" class="customer">
-                        <img src="img/university_of_florida.svg" alt="University Of Florida Logo">
-                    </div>
-                    <div id="topps" class="customer">
-                        <img src="img/topps.svg" alt="Topps Logo">
+                </div>
+                <div class="customer-info">
+                    <img src="img/designit.svg" alt="Designit Logo">
+                    <div class="divider"></div>
+                    <p>
+                        "I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora
+                        molte
+                        soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox
+                        Paper.
+                        Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e
+                        Dropbox Paper."
+                    </p>
+                    <p>Morten Thomsen, Global IT Lead</p>
+                </div>
+                <div class="customers-right">
+                    <div class="customers">
+                        <div id="world-bicycle" class="customer">
+                            <img src="img/world_bicycle_relief.svg" alt="World Bicycle Relief Logo">
+                        </div>
+                        <div id="hearst-corp" class="customer">
+                            <img src="img/hearst_corp.svg" alt="Hearst Corporation Logo">
+                        </div>
+                        <div id="lonely-planet" class="customer">
+                            <img src="img/lonely_planet.svg" alt="Lonely Planet Logo">
+                        </div>
+                        <div id="clear-channel" class="customer">
+                            <img src="img/clear_channel.svg" alt="Clear Channel Logo">
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="customer-info">
-                <img src="img/designit.svg" alt="Designit Logo">
-                <div class="divider"></div>
-                <p>
-                    "I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte
-                    soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper.
-                    Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e
-                    Dropbox Paper."
-                </p>
-                <p>Morten Thomsen, Global IT Lead</p>
-            </div>
-            <div class="customers-right">
-                <div class="customers">
-                    <div id="world-bicycle" class="customer">
-                        <img src="img/world_bicycle_relief.svg" alt="World Bicycle Relief Logo">
-                    </div>
-                    <div id="hearst-corp" class="customer">
-                        <img src="img/hearst_corp.svg" alt="Hearst Corporation Logo">
-                    </div>
-                    <div id="lonely-planet" class="customer">
-                        <img src="img/lonely_planet.svg" alt="Lonely Planet Logo">
-                    </div>
-                    <div id="clear-channel" class="customer">
-                        <img src="img/clear_channel.svg" alt="Clear Channel Logo">
-                    </div>
-                </div>
-            </div>
-
         </section>
 
         <section class="dropbox-business bg-lightblue">
