changed jumbotron layout

--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
         <section class="jumbotron bg-lightblue">
             <div class="container-medium">
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
-                <img src="img/jumbo.png" alt="Dropbox Client Image">
-                <div class="jumbotron-info clearfix">
+                <div class="jumbotron-info flex-between">
                     <div class="jumbotron-info-content">
                         <p>
                             Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo
@@ -86,6 +85,9 @@
                                 <i class="fa-solid fa-arrow-down"></i>
                             </a>
                         </p>
+                    </div>
+                    <div class="jumbotron-info-img">
+                        <img src="img/jumbo.png" alt="Dropbox Client Image">
                     </div>
                 </div>
             </div>
